--- a/environment.yml
+++ b/environment.yml
@@ -1,7 +1,7 @@
-name: rllab3
+name: sac
 channels:
-    - https://conda.anaconda.org/kne 
-    - https://conda.anaconda.org/tlatorre 
+    - https://conda.anaconda.org/kne
+    - https://conda.anaconda.org/tlatorre
     - https://conda.anaconda.org/cjs14
     - https://conda.anaconda.org/menpo
     - jjhelmus
@@ -48,6 +48,8 @@ dependencies:
         - git+https://github.com/Theano/Theano.git@adfe319ce6b781083d8dc3200fb4481b00853791#egg=Theano
         - git+https://github.com/neocxi/Lasagne.git@484866cf8b38d878e92d521be445968531646bb8#egg=Lasagne
         - git+https://github.com/plotly/plotly.py.git@2594076e29584ede2d09f2aa40a8a195b3f3fc66#egg=plotly
+        # See the Dockerfile for rllab.
+        # - git+https://github.com/rll/rllab.git@b3a28992eca103cab3cb58363dd7a4bb07f250a0#egg=rllab
         - awscli
         - git+https://github.com/openai/gym.git@v0.7.4#egg=gym
         - pyglet
