Fixing sac path in a few places and switching to a earlier numpy version (1.13.0, conda cannot find the lastest version).

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,7 +7,7 @@ services:
     container_name: soft-actor-critic
     entrypoint: tail -f /dev/null
     volumes:
-      - .:/root/softqlearning-private
+      - .:/root/sac
       - ${MUJOCO_LICENSE_PATH:-./.mujoco/mjkey.txt}:/root/rllab/vendor/mujoco/mjkey.txt
     environment:
       THEANO_FLAGS: mode=FAST_RUN,device=cpu,floatX=float32
