--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,3 +12,13 @@ services:
     environment:
       THEANO_FLAGS: mode=FAST_RUN,device=cpu,floatX=float32
       MUJOCO_PY_MJKEY_PATH: /root/rllab/vendor/mujoco/mjkey.txt
+  real-nvp-sandbox:
+    image: gcr.io/tensorflow/tensorflow:1.4.1-py3
+    container_name: sac-real-nvp
+    ports:
+      - "8888:8888"
+    expose:
+      - "8888"
+    volumes:
+      - ./:/sac
+    command: jupyter notebook --notebook-dir=/sac --allow-root
