--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,9 +12,9 @@ services:
     environment:
       THEANO_FLAGS: mode=FAST_RUN,device=cpu,floatX=float32
       MUJOCO_PY_MJKEY_PATH: /root/rllab/vendor/mujoco/mjkey.txt
-  real-nvp-sandbox:
+  lsp-sandbox:
     image: gcr.io/tensorflow/tensorflow:1.4.1-py3
-    container_name: sac-real-nvp
+    container_name: sac-lsp
     ports:
       - "8888:8888"
     expose:
